# WearMax

./: .gitignore  README.md  README_zh.md  ROO_TODO.md  conftest.py  install.ps1  main.py  pyproject.toml  sensor_list.txt  setup.md
init_env/: baiji.ps1
src/: main.py
src/hr/: __init__.py  daemon.py  data_process.py  get.py  server.py
termux/: IDENTITY.md  SOUL.md  finish-setup.sh  sensor_test.py  setup-wearmax.sh  termux-login.sh  termux.properties
termux/skills/get_hr/: SKILL.md
tests/: test_data_process.py  test_frame_assembler.py
update_watchface/: baiji.ps1
